# mytest

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  desktop-effects.c  desktop-effects.desktop.in  desktop-effects.glade
po/: POTFILES.in  as.po  ast.po  bg.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  de_CH.po  desktop-effects.pot  el.po  es.po  fi.po  fr.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  mai.po  mk.po  ml.po  mr.po  ms.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  (+17 more)
